--- a/lib/i18n/dictionaries/en.json
+++ b/lib/i18n/dictionaries/en.json
@@ -1,4 +1,10 @@
 {
+  "theme": {
+    "trigger_btn": "Toggle theme"
+  },
+  "locale": {
+    "trigger_btn": "Toggle language"
+  },
   "intro": {
     "content": {
       "title": "Signal from dust",
@@ -8,7 +14,7 @@
       "author": "Haram Kim",
       "year": 2023
     },
-    "trigger_btn": "About this project"
+    "trigger_btn": "About project"
   },
   "not_found": {
     "title": "Page not found",
@@ -29,15 +35,15 @@
       "ok_btn": "Apply"
     },
     "form": {
-      "preset_title": "Preset settings",
-      "custom_title": "Custom settings",
+      "preset_title": "Presets",
+      "custom_title": "Customs",
       "location": {
         "title": "Location",
         "placeholder": "Select a location"
       },
       "collection": {
-        "title": "Collection",
-        "placeholder": "Select a collection"
+        "title": "Group by",
+        "placeholder": "Select a group"
       },
       "dataName": {
         "title": "Data",
