--- a/lib/i18n/dictionaries/ko.json
+++ b/lib/i18n/dictionaries/ko.json
@@ -31,6 +31,8 @@
   "dataset": {
     "label": "데이터",
     "source": "{collection} {dust} 평균, {yearRange}년, {location}",
+    "year_title": "{year}의 {dust}",
+    "title": "{secondaryDate} {primaryDate}의 {dust}",
     "description": "측정 수치를 2진 신호로 출력한 결과입니다",
     "download_btn": "데이터 받기"
   },
