--- a/lib/i18n/dictionaries/ko.json
+++ b/lib/i18n/dictionaries/ko.json
@@ -1,7 +1,8 @@
 {
   "title": {
     "collection_page": "{location}의 {collection} {dust}",
-    "search_page": "{location}의 {dust}, {monthOrSeason}, {year}"
+    "search_page": "{location}의 {dust}, {monthOrSeason}, {year}",
+    "realtime_page": "{location}의 실시간 {dust}"
   },
   "not_found": {
     "title": "페이지를 찾을 수 없습니다",
@@ -30,10 +31,12 @@
   },
   "dataset": {
     "label": "데이터",
-    "source": "{collection} {dust} 평균, {yearRange}년, {location}",
-    "year_title": "{year}의 {dust}",
     "title": "{secondaryDate} {primaryDate}의 {dust}",
-    "description": "측정 수치를 2진 신호로 출력한 결과입니다",
+    "year_title": "{year}의 {dust}",
+    "realtime_title": "{location}의 실시간 {dust}",
+    "description": "측정 수치를 2진 신호로 출력합니다.",
+    "source": "{collection} {dust} 평균, {yearRange}년, {location}",
+    "realtime_source": "실시간 대기환경 평균 현황, {location}",
     "download_btn": "데이터 받기"
   },
   "intro": {
@@ -60,6 +63,7 @@
     "form": {
       "preset_title": "추천 설정",
       "custom_title": "직접 설정",
+      "realtime_title": "실시간",
       "location": {
         "title": "측정 장소",
         "placeholder": "측정 장소 선택"
