--- a/lib/i18n/dictionaries/ko.json
+++ b/lib/i18n/dictionaries/ko.json
@@ -9,7 +9,7 @@
     "ok_btn": "홈으로"
   },
   "error": {
-    "title": "데이터를 로드하는 도중 문제가 발생했습니다",
+    "title": "데이터를 불러오는 도중 문제가 발생했습니다",
     "ok_btn": "재시도"
   },
   "theme": {
